src/objects/Vendor_Receiving_Stock_Excess__c.object
<CustomObject>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendor_Receiving_Stock_Excesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Desc__c</fullName>
        <formula>&quot;No VO - Excess Received&quot;</formula>
        <label>Order Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Received Qty</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Order_Line_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Order Line Item Group</label>
        <referenceTo>Vendor_Order_Line_Item_Group__c</referenceTo>
        <relationshipLabel>Vendor Receiving Stock Excesses</relationshipLabel>
        <relationshipName>Vendor_Receiving_Stock_Excesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Receiving_Group__c</fullName>
        <label>Vendor Receiving Group</label>
        <referenceTo>Vendor_Receiving_Group__c</referenceTo>
        <relationshipLabel>Vendor Receiving Stock Excesses</relationshipLabel>
        <relationshipName>Vendor_Receiving_Stock_Excesses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vendor Receiving Stock Excess</label>
    <nameField>
        <displayFormat>VRSE-{00000000}</displayFormat>
        <label>Vendor Receiving Stock Excess Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Receiving Stock Excesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>